--- a/src/package.json
+++ b/src/package.json
@@ -1,28 +1,24 @@
 {
   "name": "my-aws-cdk-lib",
   "version": "0.1.0",
-  "bin": {
-    "my-aws-cdk-lib": "bin/my-aws-cdk-lib.js"
-  },
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "@types/node": "20.6.3",
-    "aws-cdk": "^2.99.1",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.2.2"
-  },
-  "dependencies": {
     "aws-cdk-lib": "^2.99.1",
     "constructs": "^10.0.0",
-    "my-aws-cdk-lib": "file:src/my-aws-cdk-lib-0.1.0.tgz",
-    "source-map-support": "^0.5.21"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "~5.2.2"
+  },
+  "peerDependencies": {
+    "aws-cdk-lib": "^2.99.1",
+    "constructs": "^10.0.0"
   }
 }
