--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-sdk/client-cloudformation": "^3.504.0",
+    "@aws-sdk/client-s3": "^3.504.0",
     "@types/jest": "^29.5.5",
     "@types/node": "20.6.3",
     "aws-cdk": "^2.99.1",
@@ -22,7 +24,7 @@
   "dependencies": {
     "aws-cdk-lib": "^2.99.1",
     "constructs": "^10.0.0",
-    "my-aws-cdk-lib": "file:src/my-aws-cdk-lib-0.1.0.tgz",
+    "my-aws-cdk-lib": "file:src/my-aws-cdk-lib-0.2.0.tgz",
     "source-map-support": "^0.5.21"
   }
 }
